﻿2007-06-13  Philipp Sehmisch  <tmw@crushnet.org>

	* The Mana World.dev: Updated DevCpp project file.

2007-06-13  Philipp Sehmisch  <tmw@crushnet.org>

	* src/main.cpp: Added logging of version number.

2007-06-12  David Athay  <ko2fan@gmail.com>

	* src/net/playerhandler.cpp: Fixed bug with DEF_BONUS not updating
	Mantis id: 0000087
	* data/icons/The Mana World.icns: Added Mac OSX icon.

2007-06-11  Philipp Sehmisch  <tmw@crushnet.org>

	* src/particle.h, src/being.cpp: Fixed a bug that prevented 
	being-controlled particles from being deleted (thanks to tuchs for 
	reporting).

2007-06-06  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/items.xml: Fixed defense of silk headband.

2007-06-04  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/maps/new_17-1.tmx.gz: Changed the minimap image of the
	lamp snake cave to the correct one.

2007-06-03  David Athay  <ko2fan@gmail.com>

	* src/main.cpp, src/game.cpp: Fixed screenshot taking on OSX.

2007-06-03  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/CMakeLists.txt, src/Makefile.am, docs/Makefile.am: Added some
	files to be included with the release.
	* src/utils/fastsqrt.h: Fixed warning about strict-aliasing rules.
	* src/Makefile.am: Don't die on warnings by default.
	* src/resources/image.cpp: Fixed image loading in software mode to not
	check for alpha layer when images aren't 32-bit.
	* src/graphics.cpp, src/graphics.h, src/imageparticle.cpp: Removed
	drawImageTransparent from Graphics class, should be set on image.
	* src/imageparticle.h, src/particleemitter.h, src/particle.h,
	src/particleemitter.cpp, src/particle.cpp, src/imageparticle.cpp: Have
	ParticleEmitter load a possible particle image early on and don't
	cause a crash when the image can't be found.

2007-06-02  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/winver.h, README, NEWS, CMakeLists.txt, configure.ac,
	data/help/changes.txt, data/help/header.txt: Updated version and
	release date and summarized changes.